# founder-context-engine

./: .env.template  .gitignore  README.md  pyproject.toml
admin/: start.py  start.sh
scripts/: cleanup_neo4j.py  cleanup_postgres.py  ingest_dataset.py  ingest_podcasts.py  seed_data.py  setup_db.py
src/api/: main.py
src/api/routes/: generation.py  health.py  ingestion.py
src/core/: config.py  exceptions.py  logging.py
src/db/: neo4j_client.py
src/db/prisma/: schema.prisma
src/models/: knowledge.py  schemas.py
src/services/graph/: nodes.py  state.py  workflow.py
src/services/ingestion/: base.py  classifier.py  document_parser.py  markdown_parser.py  parser_factory.py  research_parser.py  video_parser.py  web_parser.py
src/services/llm/: client.py
src/services/retrieval/: lightrag_client.py  rule_retriever.py
src/services/validation/: claim_validator.py
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_classifier_integration.py  test_dataset_ingestion.py  test_design_strategy.py  test_lightrag_neo4j.py  test_lightrag_pg.py
tests/unit/: test_classifier.py  test_content_schema.py  test_knowledge.py  test_llm_client.py  test_parser_factory.py  test_parsers.py  test_pg_config.py  test_schemas.py  test_validation.py  test_validation_retry.py  test_workflow_state.py
